fixed header alignment

--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,14 @@ body {
     font-size: 16px;
   }
 
+#name{
+  font-size: 25px;
+}
+
 h1 {
     font-size: 35px;
     margin-top: 5px;
-  }
+}
 
 .header{
   font-family: "Arial-Black", sans-serif;
@@ -22,7 +26,8 @@ h1 {
 
 nav{
   display: flex;
-  align-items: left;
+  justify-content: space-between;
+  align-items: end;
 }
 
 nav ul{
